--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -8,11 +8,10 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-
-	<artifactId>order-service</artifactId>
+	<artifactId>inventory-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>order-service</name>
-	<description>order-service</description>
+	<name>inventory-service</name>
+	<description>inventory-service</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -24,10 +23,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
 		<dependency>
