--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/order_service
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/inventory_service
 spring.datasource.username=root
 spring.datasource.password=mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
-server.port=8081
+server.port=8082
