--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/inventory_service
 spring.datasource.username=root
 spring.datasource.password=mysql
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 server.port=8082
