--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -29,3 +29,7 @@ spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
 # KeyCloak
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8090/realms/ecommerce
+
+# Tracing
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
