--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -9,3 +9,7 @@ server.port=0
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 spring.application.name=inventory-service
+
+# Tracing
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
