--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,3 +4,7 @@ eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eurek
 eureka.instance.prefer-ip-address=true
 spring.application.name=product-service
 server.port=0
+
+# Tracing
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
