--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -35,3 +35,10 @@ resilience4j.retry.instances.inventory.wait-duration=5s
 # Tracing
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+
+# Kafka Properties
+spring.kafka.bootstrap-server=http://127.0.0.1:9092
+spring.kafka.template.default-topic=orderTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.ecommerce.orderservice.event.OrderPlacedEvent
