--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>inventory-service</module>
         <module>discovery-service</module>
         <module>api-gateway</module>
+        <module>notification-service</module>
     </modules>
 
     <properties>
@@ -61,6 +62,27 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.2</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:21-jre</image>
+                    </from>
+                    <to>
+                        <image>registry.hub.docker.com/spshan/${project.artifactId}</image>
+                    </to>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>dockerBuild</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
