--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -42,3 +42,4 @@ spring.kafka.template.default-topic=orderTopic
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.type.mapping=event:com.ecommerce.orderservice.event.OrderPlacedEvent
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
