--- a/notification-service/src/main/resources/application-docker.yml
+++ b/notification-service/src/main/resources/application-docker.yml
@@ -1,9 +1,15 @@
+management:
+  zipkin:
+    tracing:
+      endpoint: http://zipkin:9411
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:password@discovery-service:8761/eureka
 spring:
-  application:
-    name: notification-service
   kafka:
     consumer:
-      bootstrap-servers: http://127.0.0.1:9092
+      bootstrap-servers: broker:29092
       group-id: orderId
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
@@ -16,33 +22,10 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: spshanmugapriyan641@gmail.com
-    password: xxx xxx xxx xxx
+    password: sdaa wecx hmpm bvxu
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
-
-server:
-  port: 0
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://eureka:password@localhost:8761/eureka
-  instance:
-    prefer-ip-address: true
-
-
-management:
-  zipkin:
-    tracing:
-      endpoint: http://localhost:9411/api/v2/spans
-  tracing:
-    sampling:
-      probability: 1.0
-  endpoints:
-      web:
-        exposure:
-          include: prometheus
