--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -8,3 +8,5 @@ server.port=0
 # Tracing
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+management.endpoints.web.exposure.include=prometheus
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
