--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -16,16 +16,21 @@ spring.cloud.gateway.routes[1].id=order-service
 spring.cloud.gateway.routes[1].uri=lb://order-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order
 
+# Inventory Service
+spring.cloud.gateway.routes[2].id=inventory-service
+spring.cloud.gateway.routes[2].uri=lb://inventory-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/inventory
+
 # Discovery Service
-spring.cloud.gateway.routes[2].id=discovery-service
-spring.cloud.gateway.routes[2].uri=http://localhost:8761
-spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.routes[2].filters[0]=SetPath=/
+spring.cloud.gateway.routes[3].id=discovery-service
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[3].filters[0]=SetPath=/
 
 # Discovery Service Static Resources
-spring.cloud.gateway.routes[3].id=discovery-service-static
-spring.cloud.gateway.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
+spring.cloud.gateway.routes[4].id=discovery-service-static
+spring.cloud.gateway.routes[4].uri=http://localhost:8761
+spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
 
 # KeyCloak
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8090/realms/ecommerce
