--- a/k8s/infrastructure/keycloak-deployment.yml
+++ b/k8s/infrastructure/keycloak-deployment.yml
@@ -60,7 +60,7 @@ metadata:
   name: keycloak
 spec:
   ports:
-    - name: "8080"
+    - name: "http"
       port: 8080
       targetPort: 8080
   selector:
