--- a/k8s/services/notification-service-deployment.yml
+++ b/k8s/services/notification-service-deployment.yml
@@ -32,10 +32,11 @@ metadata:
     app: notification-service
   name: notification-service
 spec:
+  type: LoadBalancer
   ports:
-    - name: "8080"
-      port: 8080
-      targetPort: 9192
+    - name: "80"
+      port: 80
+      targetPort: 8080
   selector:
     app: notification-service
 status:
