--- a/k8s/services/order-service-deployment.yml
+++ b/k8s/services/order-service-deployment.yml
@@ -35,10 +35,11 @@ metadata:
     app: order-service
   name: order-service
 spec:
+  type: LoadBalancer
   ports:
-    - name: "8080"
-      port: 8080
-      targetPort: 9193
+    - name: "80"
+      port: 80
+      targetPort: 8080
   selector:
     app: order-service
 status:
