--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -78,6 +78,11 @@
 			<artifactId>spring-kafka</artifactId>
 			<version>3.1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-hal-browser</artifactId>
+			<version>3.3.6.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 </project>
